[tool.poetry]
name = "path-of-accounting"
version = "0.1.0"
description = "A python based price checker for Path of Exile"
authors = ["Ethck"]
license = "GPL 3"

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.3"
requests = "^2.22.0"
keyboard = "^0.13.4"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
