[tool.poetry]
name = "Path-of-Accounting"
version = "0.1.0"
description = ""
authors = ["Ethck"]

[tool.poetry.dependencies]
python = "^3.7"
typing = "^3.7.4"
requests = "^2.22.0"
colorama = "^0.4.3"
keyboard = "^0.13.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
black = "^19.10b0"
isort = "^4.3.21"
pre-commit = "^1.21.0"

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
force_single_line = false
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

